--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,intbot.status,intbot.bot,intbot.bot.sizzle
+keys=root,intbot.status,intbot.bot,intbot.bot.sizzle,discord.client,discord.gateway
 
 [handlers]
 keys=consoleHandler, fileHandler
@@ -27,6 +27,18 @@ propagate=0
 level=DEBUG
 handlers=consoleHandler, fileHandler
 qualname=intbot.bot.sizzle
+propagate=0
+
+[logger_discord.client]
+level=INFO
+handlers=consoleHandler, fileHandler
+qualname=discord.client
+propagate=0
+
+[logger_discord.gateway]
+level=INFO
+handlers=consoleHandler, fileHandler
+qualname=discord.gateway
 propagate=0
 
 [handler_consoleHandler]
