--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,intbot.status,intbot.bot,intbot.bot.sizzle,discord.client,discord.gateway
+keys=root,intbot.status,intbot.bot,intbot.bot.sizzle,intbot.bot.clashloop,intbot.bot.clashsearch,discord.client,discord.gateway
 
 [handlers]
 keys=consoleHandler, fileHandler
@@ -25,9 +25,21 @@ propagate=0
 
 [logger_intbot.bot.sizzle]
 level=DEBUG
-handlers=consoleHandler, fileHandler
+handlers=
 qualname=intbot.bot.sizzle
-propagate=0
+propagate=1
+
+[logger_intbot.bot.clashloop]
+level=DEBUG
+handlers=
+qualname=intbot.bot.clashloop
+propagate=1
+
+[logger_intbot.bot.clashsearch]
+level=DEBUG
+handlers=
+qualname=intbot.bot.clashsearch
+propagate=1
 
 [logger_discord.client]
 level=INFO
